--- a/service/pom.xml
+++ b/service/pom.xml
@@ -22,6 +22,7 @@
             <groupId>com.baomidou</groupId>
             <artifactId>mybatis-plus</artifactId>
             <version>3.5.2</version>
+            <optional>false</optional>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
