--- a/door/pom.xml
+++ b/door/pom.xml
@@ -19,11 +19,26 @@
             <artifactId>spring-boot-starter</artifactId>
         </dependency>
 
+        <!--web-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-            <scope>test</scope>
+            <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
+
+        <!--lombok-->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
+
+        <!--exception response-->
+        <dependency>
+            <groupId>com.whut.web</groupId>
+            <artifactId>response-exception</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+
     </dependencies>
     <dependencyManagement>
         <dependencies>
@@ -54,7 +69,7 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <version>${spring-boot.version}</version>
                 <configuration>
-                    <mainClass>com.whut.apipaltform.door.DoorApplication</mainClass>
+                    <mainClass>com.whut.apiplatform.door.DoorApplication</mainClass>
                     <skip>true</skip>
                 </configuration>
                 <executions>
