--- a/service/pom.xml
+++ b/service/pom.xml
@@ -24,9 +24,18 @@
             <version>3.5.2</version>
             <optional>false</optional>
         </dependency>
+
+
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
+            <version>5.8.25</version>
+            <optional>false</optional>
         </dependency>
     </dependencies>
 
