--- a/core/pom.xml
+++ b/core/pom.xml
@@ -53,13 +53,6 @@
             <scope>runtime</scope>
         </dependency>
 
-        <!--jwt-->
-        <dependency>
-            <groupId>com.whut.coomon</groupId>
-            <artifactId>jwt-model</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-
         <!--redis-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -71,6 +64,13 @@
             <groupId>org.redisson</groupId>
             <artifactId>redisson</artifactId>
             <version>3.13.6</version>
+        </dependency>
+
+        <!--processor-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <scope>annotationProcessor</scope>
         </dependency>
 
 
