--- a/service/pom.xml
+++ b/service/pom.xml
@@ -37,6 +37,10 @@
             <version>5.8.25</version>
             <optional>false</optional>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-tx</artifactId>
+        </dependency>
     </dependencies>
 
     <properties>
