--- a/service/pom.xml
+++ b/service/pom.xml
@@ -41,6 +41,15 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-tx</artifactId>
         </dependency>
+
+        <!--json format-->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+            <version>2.15.2</version>
+            <scope>compile</scope>
+            <optional>false</optional>
+        </dependency>
     </dependencies>
 
     <properties>
