--- a/core/pom.xml
+++ b/core/pom.xml
@@ -74,6 +74,19 @@
         </dependency>
 
 
+        <!--Dubbo配件-->
+        <dependency>
+            <groupId>org.apache.dubbo</groupId>
+            <artifactId>dubbo-spring-boot-starter</artifactId>
+            <version>3.2.12</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.dubbo</groupId>
+            <artifactId>dubbo-registry-nacos</artifactId>
+            <version>3.2.12</version>
+        </dependency>
+
+
     </dependencies>
     <dependencyManagement>
         <dependencies>
