--- a/core/pom.xml
+++ b/core/pom.xml
@@ -87,6 +87,19 @@
         </dependency>
 
 
+        <!--canal-->
+        <dependency>
+            <groupId>com.alibaba.otter</groupId>
+            <artifactId>canal.client</artifactId>
+            <version>1.1.7</version>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba.otter</groupId>
+            <artifactId>canal.protocol</artifactId>
+            <version>1.1.7</version>
+        </dependency>
+
+
     </dependencies>
     <dependencyManagement>
         <dependencies>
