--- a/core/pom.xml
+++ b/core/pom.xml
@@ -99,6 +99,13 @@
             <version>1.1.7</version>
         </dependency>
 
+        <!--api starter-->
+        <dependency>
+            <groupId>com.whut.apipaltform</groupId>
+            <artifactId>api-spring-boot-starter</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+
 
     </dependencies>
     <dependencyManagement>
