--- a/core/src/main/resources/application.yaml
+++ b/core/src/main/resources/application.yaml
@@ -61,3 +61,9 @@ canal:
   host: 123.60.168.252
   port: 11111
   destination: example
+
+api-platform:
+  server-port: 7531
+  server-host: localhost
+  access-key: access
+  secret-key: secret
