--- a/door/pom.xml
+++ b/door/pom.xml
@@ -2,7 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.whut.apipaltform</groupId>
+    <groupId>com.whut.apiplatform</groupId>
     <artifactId>door</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>door</name>
@@ -51,7 +51,7 @@
 
         <!--service-->
         <dependency>
-            <groupId>com.whut.apipaltform</groupId>
+            <groupId>com.whut.apiplatform</groupId>
             <artifactId>service</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
