modify model can be package to jar

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -138,7 +138,7 @@
                 <version>${spring-boot.version}</version>
                 <configuration>
                     <mainClass>com.whut.apiplatform.core.CoreApplication</mainClass>
-                    <skip>true</skip>
+                    <skip>false</skip>
                 </configuration>
                 <executions>
                     <execution>
