--- a/door/pom.xml
+++ b/door/pom.xml
@@ -87,7 +87,7 @@
                 <version>${spring-boot.version}</version>
                 <configuration>
                     <mainClass>com.whut.apiplatform.door.DoorApplication</mainClass>
-                    <skip>true</skip>
+                    <skip>false</skip>
                 </configuration>
                 <executions>
                     <execution>
