--- a/pom.xml
+++ b/pom.xml
@@ -63,7 +63,7 @@
                 <version>${spring-boot.version}</version>
                 <configuration>
                     <mainClass>com.whut.apiplatform.ApiPlatformBackupApplication</mainClass>
-                    <skip>true</skip>
+                    <skip>false</skip>
                 </configuration>
                 <executions>
                     <execution>
