--- a/server-demo/pom.xml
+++ b/server-demo/pom.xml
@@ -55,7 +55,7 @@
                 <version>${spring-boot.version}</version>
                 <configuration>
                     <mainClass>com.whut.test.serverdemo.ServerDemoApplication</mainClass>
-                    <skip>true</skip>
+                    <skip>false</skip>
                 </configuration>
                 <executions>
                     <execution>
