--- a/service/pom.xml
+++ b/service/pom.xml
@@ -3,19 +3,16 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <parent>
-        <groupId>com.whut</groupId>
-        <artifactId>api-platform</artifactId>
-        <version>0.0.1-SNAPSHOT</version>
-    </parent>
 
     <groupId>com.whut.apiplatform</groupId>
     <artifactId>service</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
 
     <dependencies>
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
+            <version>1.18.30</version>
         </dependency>
 
         <dependency>
@@ -29,6 +26,7 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
+            <version>5.3.23</version>
         </dependency>
 
         <dependency>
@@ -40,6 +38,7 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-tx</artifactId>
+            <version>5.3.23</version>
         </dependency>
 
         <!--json format-->
